PN-7375: fix idempotenza su seconda prepare